# swc-plugin-import-extension-resolver

./: .editorconfig  Cargo.toml  LICENSE  README.md  flake.nix  package.json  shell.nix
src/: lib.rs
