[package]
name = "swc-plugin-import-extension-resolver"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
regex = "1.8.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.97"
swc_core = { version = "0.78.*", features = ["ecma_plugin_transform"] }
swc_ecma_transforms_module = "0.172.6"

[dev-dependencies]
swc_ecma_parser = "0.136.0"
swc_ecma_transforms_testing = "0.132.2"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = "symbols"
